feat: add core package with basic client setup

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,10 +2,15 @@
   "name": "@docusign-agent-tools/core",
   "version": "0.0.1",
   "private": false,
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
-    "lint": "eslint src/",
-    "test": "vitest"
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
+    "clean": "rm -rf dist"
   }
 } 
