--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -26,6 +26,7 @@
     "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "shiki": "^1.27.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
