--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "packages/*"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "pnpm --filter docs dev",
+    "build": "pnpm -r build",
+    "test": "pnpm -r test"
   },
   "keywords": [],
   "author": "",
