--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "contentlayer": "contentlayer build",
+    "dev": "contentlayer build && next dev",
+    "build": "contentlayer build && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentlayer/source-files": "^0.3.4",
     "@next/mdx": "^15.1.5",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
@@ -26,12 +28,12 @@
     "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "shiki": "^1.27.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.17.14",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
