--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,16 +1,43 @@
 {
   "name": "@docusign-agent-tools/core",
-  "version": "0.0.1",
-  "private": false,
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist/**"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts",
-    "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
-    "clean": "rm -rf dist"
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "clean": "rm -rf dist",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint src --ext .ts,.tsx",
+    "test": "jest",
+    "demo": "tsx examples/demo.ts"
+  },
+  "dependencies": {
+    "@types/docusign-esign": "^5.19.1",
+    "docusign-esign": "^6.5.1",
+    "zod": "^3.22.4",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.6",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.3",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.7.0"
+  },
+  "peerDependencies": {
+    "ai": "^2.2.31"
   }
-} 
+}
