--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "docusign-agent-tools",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "workspaces": [
     "packages/*"
   ],
   "scripts": {
-    "dev": "pnpm --filter docs dev",
-    "build": "pnpm -r build",
-    "test": "pnpm -r test"
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "clean": "turbo run clean",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.10.7",
-    "tsup": "^8.3.5",
-    "typescript": "^5.7.3"
-  }
+    "turbo": "^1.11.3",
+    "prettier": "^3.2.4",
+    "typescript": "^5.3.3"
+  },
+  "packageManager": "npm@10.2.4"
 }
