(fix) DocuSign > Docusign

--- a/packages/core/.env.example
+++ b/packages/core/.env.example
@@ -1,4 +1,4 @@
-# DocuSign Credentials
+# Docusign Credentials
 DOCUSIGN_CLIENT_ID=your_client_id_here
 DOCUSIGN_ACCESS_TOKEN=your_access_token_here
 DOCUSIGN_ACCOUNT_ID=your_account_id_here 
